# Heuristic-Problem-Solving

./: README.md
problem_1_tsp/: .dropbox  LKMain.cpp  LKMatrix.cpp  README.md  a.out  mst.cpp~
problem_1_tsp/HPC-Final-Project-master/lin-kernighan/: test.c
problem_1_tsp/lk-0.4.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  config.h.in  configure  configure.in
problem_1_tsp/lk-0.4.0/RCS/: Makefile.am,v  README,v  TODO,v  acconfig.h,v  config.h.in,v  configure.in,v
problem_1_tsp/lk-0.4.0/data/: Makefile.am  Makefile.in  README  clouds.ifs  fern.ifs  fullgrid1024.tsp  fullgrid16.tsp  fullgrid4.tsp  galaxy.ifs  menger.ifs  sier3.ifs  test.ifs  tiefighter.ifs  tropicalfish.ifs  tropicalfisheye.ifs  unifd.42.1000.tsp  usa.ifs
problem_1_tsp/lk-0.4.0/data/RCS/: Makefile.am,v  README,v
problem_1_tsp/lk-0.4.0/expt/: 0.0  Makefile.am  Makefile.in  README  exptmatch  expttest  expttsp  expttsphk
problem_1_tsp/lk-0.4.0/expt/RCS/: Makefile.am,v  expt
problem_1_tsp/lk-0.4.0/script/: GB_flip.pm.in  Makefile.am  Makefile.in  PRNG.pm.in  README  TSP.pm.in  att2upper.pl.in  cd.pl.in  cfresults.pl.in  cfresults.pl.in.new  countpages.pl.in  domst.pl.in  doshake.pl.in  doshakelk.pl.in  expt.pl.in  hist.pl.in  improve.pl.in  least.pl.in  lkdoit.in  lkdoitcmp.in  milestone.pl.in  mkcwebch.pl.in  mstelratio.pl.in  mstrsortlen.pl.in  mstsortlen.pl.in  myps2eps.pl.in  number.pl.in  probe.pl.in  results.pl.in  spectrum.pl.in  tsp2dm.pl.in  tspbgen.pl.in  tspreorder.pl.in  tsprotate.pl.in
problem_1_tsp/lk-0.4.0/script/RCS/: GB_flip.pm.in,v  Makefile.am,v  PRNG.pm,v  TSP.pm.in,v  att2upper.pl,v  cfresults.pl.in,v  domst.pl.in,v  expt.pl.in,v  gb_flip.pl.in,v  improve.pl.in,v  lkdoit.in,v  lkdoitcmp.in,v  milestone.pl.in,v  mstelratio.pl.in,v  mstrsortlen.pl.in,v  mstsortlen.pl.in,v  number.pl.in,v  probe.pl.in,v  results.pl.in,v  tspbgen.pl.in,v  tspreorder.pl,v  tspreorder.pl.in,v
problem_1_tsp/lk-0.4.0/src/: Makefile.am  Makefile.in  array.c  array.h  array.w  ascend.c  ascend.h  ascend.w  compile.c.in  construct.c  construct.h  construct.w  copyrt.w  declevel.h  decluster.c  decluster.h  decluster.w  declustertest.c  dict.c  dict.h  dict.w  dicttest.c  distcalc.c  distcalc.w  dsort.c  dsort.h  dsort.w  dsorttest.c  error.c  error.h  error.w  fixincludes.h  fixincludes.w  fullgrid.c  fullgrid.w  gb_flip.c  gb_flip.ch  gb_flip.h  ifs.c  ifs.w  (+59 more)
problem_1_tsp/lk-0.4.0/src/RCS/: Makefile.am,v  Makefile.shell,v  Makefile.very.old.,v  array.w,v  ascend.w,v  boilerplate.w,v  branch.w,v  compile.c.in,v  construct.w,v  copyrt.w,v  debug.w,v  declevel.h,v  decluster.w,v  dict.w,v  distcalc.w,v  doitcmp.in,v  dsort.w,v  ee.w,v  error.w,v  fixincludes.w,v  fullgrid.w,v  gb_flip.ch,v  gb_flip.w,v  hk.w,v  ifs.w,v  jbmr.w,v  jitter.w,v  kdtree.w,v  kruskal.w,v  leaf.ifs,v  length.w,v  lk.w,v  lkconfig.h,v  match.w,v  memory.w,v  mkcwebch.pl,v  nn.w,v  pool.w,v  pq.w,v  prim.w,v  (+15 more)
problem_1_tsp/my_lkh/: LKMain_m.cpp  LKMain_m.cpp~  LKMatrix.h  LKMatrix_m.cpp  LKMatrix_m.cpp~  LKMatrix_m2.cpp  LKSolver  exec.sh  lkh.cpp  lkh.cpp~  mst.cpp  mst.cpp~  sample_1.out.tsp  sample_2.out.tsp  sample_3.out.tsp  sample_4.out.tsp  sample_5.out.tsp  test.cpp  test.cpp~  testgen.py
problem_3_sat/: README.md  WalkSat.cpp  my_sat.cpp  my_sat_better.cpp  rand_lib.hh  sat_solver  sat_solver.cpp  sat_solver_2.cpp
problem_3_sat/bit128/: out128_0  out128_1  out128_2  out128_3  out128_4  sat_128_0.txt  sat_128_1.txt  sat_128_2.txt  sat_128_3.txt  sat_128_4.txt
problem_3_sat/bit32/: out32_0  out32_1  out32_2  out32_3  out32_4  sat_32_0.txt  sat_32_1.txt  sat_32_2.txt  sat_32_3.txt  sat_32_4.txt
problem_3_sat/bit64/: out64_0  out64_1  out64_2  out64_3  out64_4  sat_64_0.txt  sat_64_1.txt  sat_64_2.txt  sat_64_4.txt
problem_3_sat/bit8/: sat_8_0.txt  sat_8_1.txt  sat_8_2.txt  sat_8_3.txt  sat_8_4.txt
problem_3_sat/src/: README  WalkSat  WalkSat.cpp  WalkSat.sh  compiler.sh  rand_lib.h
problem_4_knapsack/: BNBTree.cpp  Knapsack.cpp  a.out  evaluator  knapsack.hh  mulknap.c  naive_knapsack  naive_knapsack.cpp  quadknap_naive.h  solver  test
problem_4_knapsack/fortran_codes/: MT1.FOR  MT1R.FOR  MT2.FOR  MTB2.FOR  MTC2.FOR  MTCB.FOR  MTG.FOR  MTHG.FOR  MTHM.FOR  MTM.FOR  MTSL.FOR  MTU2.FOR
problem_4_knapsack/prob1/: sample_1_0.in  sample_1_0.out  sample_1_1.in  sample_1_1.out  sample_1_2.in  sample_1_2.out  sample_1_3.in  sample_1_3.out  sample_1_4.in  sample_1_4.out
problem_4_knapsack/prob2/: sample_2_0.out  sample_2_1.in  sample_2_1.out  sample_2_2.in  sample_2_2.out  sample_2_3.in  sample_2_3.out
problem_4_knapsack/prob3/: sample_3_0.in  sample_3_0.out  sample_3_1.in  sample_3_3.in  sample_3_3.out  sample_3_4.in  sample_3_4.out
problem_4_knapsack/src/: README  compiler.sh  quadknap.h  solver.sh
problem_5_darwin/: a.out  darwin.cpp  darwin.cpp~  darwin_mod.cpp  edmondskarp.hh  edmondskarp.h~  output_B_darwin.txt
problem_5_darwin/input/: inputd.in
problem_6_SVP/: generator.py~  solver.py
problem_6_SVP/input/: input1.in  input1.out  input2.in  input2.out  input3.in  input3.out  input4.in  input4.out  input5.in
problem_6_SVP/npcrazy/: SVP_README.txt  get_bkz_reduction  get_gram_schmidt
problem_6_SVP/ruchi_kunal/: LICENSE  Makefile  README  a.out  common.cc  common.h  doreduce.py  gsieve.cc  gsieve.h  gsieve_main.cc  input1.in  input2.in  input3.in  input4.in  inputform.in  lllinput2.in  oo2  out1  out3  out4  output2.out  print_result2_main.cc  print_result_main.cc  produce_result.cpp  rto1  rtout1  run.sh  sampler.cc  sampler.h  svptry.py  tempmat  trysample_main.cc  ut1.py  ut2.py
problem_6_SVP/ryan/: svp.py
problem_7_Agony/input/: problem_1.out
problem_8_lemons/: a.out  densest.cpp~  edmondskarp.h  edmondskarp.hh  edmondskarp.h~  fastflow.h  fastflow.hh  fastflow.h~  inp  lemons.cpp  lemons.cpp~
problem_8_lemons/input/: input_1.txt  input_2.txt  input_3.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
problem_8_lemons/param/: param_1.txt  param_2.txt  param_3.txt  param_4.txt  param_5.txt  param_6.txt  param_7.txt  param_8.txt  param_9.txt
(+267 files in other folders)
