## Process this file with automake to produce Makefile.in
# Makefile for TSP data for LK 

##   Copyright (C) 1994, 1995, 1996, 1997 David Neto
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation; either version 2, or (at your option)
##   any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program; if not, write to the Free Software
##   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
##   02111-1307, USA.

dist-hook : 
	cp -r RCS $(distdir)

pkgdata_DATA = README \
	att532.tsp \
	brazil58.tsp \
	brd14051.tsp \
	dantzig42.tsp \
	dsj1000.tsp \
	fl3795.tsp \
	fnl4461.tsp \
	fullgrid1024.tsp \
	fullgrid16.tsp \
	fullgrid4.tsp \
	gr431.tsp \
	gr666.tsp \
	lin105.tsp \
	lin318.tsp \
	pcb442.tsp \
	pcb3038.tsp \
	pla7397.tsp \
	pr1002.tsp \
	pr2392.tsp \
	rl5934.tsp \
	unifd.42.1000.tsp \
	clouds.ifs \
	fern.ifs \
	galaxy.ifs \
	leaf.ifs \
	menger.ifs \
	sier3.ifs \
	test.ifs \
	tiefighter.ifs \
	tropicalfish.ifs \
	tropicalfisheye.ifs \
	usa.ifs

